<resources>
    <string name="app_name"><![CDATA[Tv&Movie]]></string>

    <!--Login-->
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_mess">Password must be at least 6 characters</string>
    <string name="not_valid">Email or password not valid</string>
    <string name="not_a_member">Not a member?</string>
    <string name="logout">Logout</string>
    <string name="logo"><![CDATA[Tv&Movie]]></string>

    <!--Bottom navigation-->
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_activity_auth">AuthActivity</string>

    <!--Category names-->
    <string name="category">category</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv">Popular Tv</string>
    <string name="trending_now">Trending Now</string>
    <string name="favorites">Favorites</string>

    <!--Item-->
    <string name="title">Title: %1$s</string>
    <string name="original_title">Original Title: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="original_name">Original Name: %1$s</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="media_type">Media Type: %1$s</string>
    <string name="first_air_date">First Air Date: %1$s</string>
    <string name="genres">Genres: %1$s</string>
    <string name="score">Score: %1$s</string>
    <string name="review"><u>Review</u></string>
    <string name="overview">Overview: %1$s</string>
    <string name="original_language">Original Language: %1$s</string>
    <string name="number_of_seasons">Number of seasons: %1$s</string>
    <string name="number_of_episodes">Number of episodes: %1$s</string>
    <string name="number">9.5</string>

    <!--Descriptions img-->
    <string name="description_poster">poster</string>
    <string name="description_rating">rating</string>
    <string name="description_backdrop">backdrop</string>
    <string name="description_favorite">favorite</string>
    <string name="description_go_back">go back</string>

</resources>