<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00034948"
        tools:context=".ui.item.MovieFragment">

        <ImageView
            android:id="@+id/iv_trending_back"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="#00034948"
            android:contentDescription="@string/description_backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_image" />

        <ImageButton
            android:id="@+id/ib_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/description_favorite"
            app:layout_constraintEnd_toEndOf="@+id/iv_trending_back"
            app:layout_constraintTop_toTopOf="@+id/iv_trending_back"
            app:srcCompat="@drawable/favorite"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_trending_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#A8000000"
            android:contentDescription="@string/description_rating"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="2dp"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableRightCompat="@drawable/star"
            app:drawableTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@+id/iv_trending_back"
            app:layout_constraintEnd_toEndOf="@+id/iv_trending_back" />

        <ImageView
            android:id="@+id/iv_trending_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="#00034948"
            android:contentDescription="@string/description_poster"
            android:scaleType="fitCenter"
            android:src="@drawable/no_image"
            app:layout_constraintBottom_toBottomOf="@+id/iv_trending_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_trending_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_trending_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/iv_trending_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_trending_item"
            app:layout_constraintTop_toBottomOf="@+id/iv_trending_back" />

        <TextView
            android:id="@+id/text_trending_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/genres"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_trending_item" />

        <TextView
            android:id="@+id/text_media_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/media_type"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trending_genres" />

        <TextView
            android:id="@+id/text_trending_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_media_type" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/review"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trending_date" />

        <TextView
            android:id="@+id/text_trending_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review" />

        <TextView
            android:id="@+id/text_trending_original_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/original_language"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trending_overview" />

        <TextView
            android:id="@+id/text_trending_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="140dp"
            android:text="@string/original_title"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trending_original_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>