<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="246dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="#00034948"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_list_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00034948"
            android:contentDescription="@string/description_poster"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_image" />

        <ImageButton
            android:id="@+id/ib_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/description_favorite"
            app:layout_constraintStart_toStartOf="@+id/iv_list_movie"
            app:layout_constraintTop_toTopOf="@+id/iv_list_movie"
            app:srcCompat="@drawable/favorite"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_list_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8D000000"
            android:drawablePadding="2dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="2dp"
            android:paddingBottom="8dp"
            android:text="@string/number"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            app:drawableRightCompat="@drawable/star"
            app:drawableTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@+id/iv_list_movie"
            app:layout_constraintEnd_toEndOf="@+id/iv_list_movie"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>