<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00034948"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/text_popular_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:text="@string/popular_movies"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableRightCompat="@drawable/arrow_forward"
            app:drawableTint="@color/white"
            app:emojiCompatEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_popular_movies"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/movie_item" />

        <TextView
            android:id="@+id/text_popular_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:text="@string/popular_tv"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableRightCompat="@drawable/arrow_forward"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_popular_tv"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/movie_item" />

        <TextView
            android:id="@+id/text_trending_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:text="@string/trending_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableRightCompat="@drawable/arrow_forward"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trending_now"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/movie_item" />

        <ProgressBar
            android:id="@+id/progress_home"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text_trending_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



